--- a/css/style.css
+++ b/css/style.css
@@ -775,3 +775,77 @@ button {
 .logo-studio {
   color: var(--hero-text);
 }
+
+/*  форма підписки */
+.form-footer{
+  display: block;
+  padding-left: 93px;
+}
+
+.input-footer{
+  padding-left: 16px;
+  padding-right: 12px;
+  
+  width: 358px;
+  height: 50px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  background-color: var(--footer-backgraund);
+}
+
+.input-footer::placeholder{
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.title-input-footer{
+  display: block;
+  margin-bottom: 20px;
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #FFFFFF;
+}
+
+
+
+.button-form-footer{
+  display:flex;
+  align-items: center;
+  margin-left: 12px;
+  width: 200px;
+  height: 50px;
+  background-color:var(--hover-focus-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border-color: transparent;
+
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  color: #FFFFFF;
+}
+
+.icon-input{
+  margin-left: 12px;
+  
+}
+
+.name-button-footer{
+  padding-right: 10px;
+  padding-left: 18px;
+}
+
+.submit-form{
+  display: flex;
+  align-items: center;
+
+}
+  
+
