--- a/css/style.css
+++ b/css/style.css
@@ -312,8 +312,94 @@ button {
   
 }
 
+.modal-form-conteiner{
+  margin-left: 40px;
+}
 
+.modal-title{
+margin-top: 40px;
+margin-bottom: 12px;
 
+ font-weight: 700;
+font-size: 20px;
+line-height: 1.15;
+letter-spacing: 0.03em;
+color: var(--title);
+}
+
+.label-modal{
+  margin-bottom: 4px;
+  display: flex;
+}
+
+.input-modal{
+  display: block;
+  width: 448px;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  
+}
+
+.modal-form-conteiner .input-modal:not(:last-child){
+  margin-bottom: 10px;
+} 
+
+.comment-modal{
+  width: 448px;
+  height: 120px;
+  resize: none;
+  display: flex;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+
+.comment-modal{
+  padding-top: 12px;
+  padding-left: 16px;
+  
+}
+
+.checkbox{
+  width: 16px;
+  height: 15px;
+  border: solid 2px var(--title);
+  margin-top: 25px;
+  margin-right:8px ;
+}
+
+.modal-checkbox{
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+
+.terms{
+  color: var(--hover-focus-color);
+}
+
+.checkbox-conteiner{
+  
+
+}
+
+.button-submit-form{
+  margin-top: 30px;
+  width: 200px;
+  height: 50px;
+  background: #2196F3;
+  border-color: transparent;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  color: #FFFFFF;
+
+}
 
 /* Наші переваги и Наша команда*/
 
