--- a/css/style.css
+++ b/css/style.css
@@ -201,7 +201,6 @@ button {
 
 /* Герой */
 
-
 .hero {
   
   text-align: center;
@@ -239,6 +238,8 @@ button {
   text-transform: uppercase;
 }
 
+/* кнопка героя */
+
 .hero-button {
   width: 216px;
   height: 50px;
@@ -260,6 +261,8 @@ button {
   background-color: var(--hover-focus-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
+
+/* модальне вікно */
 
 .backdrop.is-hidden{
   opacity: 0;
@@ -290,27 +293,42 @@ button {
   min-height: 581px;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 4px;
-  
-  
-  
+  border-radius: 4px; 
 }
+
+
 .close-modal{
+  width: 30px;
+  height: 30px;
+  border: 1px solid rgba(0, 0, 0, 0.1) ;
+  border-radius: 50%;
+
   position: absolute;
   right: 0px;
   top: 0px;
   padding: 0 0;
-  border: 0;
+  
   background: none;
   margin-right: 8px;
   margin-top: 8px;
 }
 
-.icon-close{
-  
-  stroke:  rgba(0, 0, 0, 0.1);
-  
+.close-svg{
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  transform: translate(-57%, -60%);
+   
+  fill:#000000;
 }
+
+.close-modal:hover .close-svg{
+  fill:var(--hover-focus-color)
+}
+
+
+
+/* Форма */
 
 .modal-form-conteiner{
   margin-left: 40px;
@@ -346,31 +364,6 @@ color: var(--title);
   margin-bottom: 10px;
 } 
 
-.comment-modal{
-  width: 448px;
-  height: 120px;
-  resize: none;
-  display: flex;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-}
-
-.comment-modal{
-  padding-top: 12px;
-  padding-left: 16px;
-  
-}
-
-
-
-
-
-.modal-checkbox{
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: #757575;
-}
 
 .submit{
   position: relative;
@@ -387,28 +380,79 @@ color: var(--title);
 
 .input-modal:focus{
   outline: none; 
-  border:solid 1px var(--hover-focus-color);
-  
-}
-
-.comment-modal:focus{
-  outline: none; 
-  border:solid 1px var(--hover-focus-color);
-
-   
+  border:solid 1px var(--hover-focus-color);  
 }
 
 .input-modal:focus-within + .icon-form {
   fill:var(--hover-focus-color);
-  
 }
 
+/* Коментар форми */
+
+.comment-modal{
+  padding-top: 12px;
+  padding-left: 16px;
+
+  width: 448px;
+  height: 120px;
+  resize: none;
+  display: flex;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+
+
+.comment-modal:focus{
+  outline: none; 
+  border:solid 1px var(--hover-focus-color);
+}
+
+/* Checkbox погодження */
+
+.modal-checkbox{
+ display: flex;
+ align-items: center;
+ margin-top: 25px;
+  margin-left: 54px;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
 
 .terms{
   color: var(--hover-focus-color);
 }
 
+.checkbox{
+  appearance: none;
+  position: absolute;
+}
 
+.checkbox-conteiner{
+  margin-top: 25px;
+}
+
+/* кастом чекбокс */
+.icon-checkbox{
+  margin-right: 8px;
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  border: solid 2px black;
+  border-radius: 1px;
+  
+}
+
+.checkbox:checked + .icon-checkbox{
+  background-color:var(--hover-focus-color);
+  background-image: url(/images/icon\ check.svg);
+  border-color: var(--hover-focus-color);
+ background-size: contain; 
+ background-origin: border-box;
+}
+
+/* кнопка відправки форми */
 
 .button-submit-form{
   margin-top: 30px;
@@ -897,12 +941,17 @@ color: var(--title);
 .input-footer{
   padding-left: 16px;
   padding-right: 12px;
-  
+
   width: 358px;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
   background-color: var(--footer-backgraund);
+
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
 }
 
 .input-footer::placeholder{
@@ -911,6 +960,8 @@ color: var(--title);
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
+
+
 
 .title-input-footer{
   display: block;
