--- a/css/style.css
+++ b/css/style.css
@@ -446,7 +446,7 @@ color: var(--title);
 
 .checkbox:checked + .icon-checkbox{
   background-color:var(--hover-focus-color);
-  background-image: url(/images/icon\ check.svg);
+  background-image: url(../images/icon-check.svg);
   border-color: var(--hover-focus-color);
  background-size: contain; 
  background-origin: border-box;
